[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Score.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/PowerUps.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Money.tscn" type="PackedScene" id=5]

[node name="HUD" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 240.0
color = Color( 0, 0, 0, 1 )

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
margin_left = 50.0
margin_top = 30.0
margin_right = 90.0
margin_bottom = 70.0

[node name="Scores" parent="." instance=ExtResource( 3 )]
margin_top = -5.0
margin_bottom = -5.0

[node name="PowerUps" parent="." instance=ExtResource( 4 )]
margin_left = 190.796
margin_top = 120.0
margin_right = 190.796
margin_bottom = 120.0
rect_scale = Vector2( 0.6, 0.6 )

[node name="Money" parent="." instance=ExtResource( 5 )]
margin_left = 50.0
margin_top = 153.0
margin_right = 50.0
margin_bottom = 170.0

[connection signal="bled" from="." to="HealthBar" method="_on_HUD_bled"]
[connection signal="bonus" from="." to="Scores" method="_on_HUD_bonus"]
[connection signal="bonus_info" from="." to="Scores" method="_on_HUD_bonus_info"]
[connection signal="coffee" from="." to="PowerUps" method="_on_HUD_coffee"]
[connection signal="coffee_ended" from="." to="PowerUps" method="_on_HUD_coffee_ended"]
[connection signal="croissant" from="." to="PowerUps" method="_on_HUD_croissant"]
[connection signal="health_changed" from="." to="HealthBar" method="_on_HUD_health_changed"]
[connection signal="immunity" from="." to="HealthBar" method="_on_HUD_immunity"]
[connection signal="money" from="." to="Money" method="_on_HUD_money"]
[connection signal="score" from="." to="Scores" method="_on_HUD_score"]
[connection signal="special" from="." to="PowerUps" method="_on_HUD_special"]
[connection signal="special_ended" from="." to="PowerUps" method="_on_HUD_special_ended"]
[connection signal="water" from="." to="PowerUps" method="_on_HUD_water"]
[connection signal="water_ended" from="." to="PowerUps" method="_on_HUD_water_ended"]
